Update App.css - fixed overflow issue in android

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,6 @@ a:not(:hover)::before {
   padding: 20px;
   padding-top: 20px;
   height: 90vh;
-  overflow: hidden;
 }
 
 h2 {
